@@ -4,4 +4,4 @@
  */
 ?>
 
-Feature not possible yet, waiting on a global transaction API to be implemented.
+Feature not possible yet. Waiting on <a href='https://github.com/Zilliqa/Zilliqa/issues/538' target='_blank'>https://github.com/Zilliqa/Zilliqa/issues/538</a> to be implemented, or testnet to be public instead of private (for leveldb block parsing access).
