@@ -2,12 +2,17 @@
 /*
  * Copyright 2018 GPLv3, Zillexplorer by Mike Kilday: http://DragonFrugal.com
  */
+ 
+//print_r($_SESSION['user']); // DEBUGGING
+
+if ( $_SESSION['user']['id'] ) {
 ?>
-ACCOUNT ALERTS
+
+<h3>Account Alerts</h3>
+
 
 <?php
-if ( $saved_addresses ) {
-	
+
 	$query = "SELECT * FROM user_addresses ORDER BY address WHERE user_id = '".$_SESSION['user']['id']."'";
 	
 	if ($result = @mysqli_query($db_connect, $query)) {
@@ -21,6 +26,17 @@ if ( $saved_addresses ) {
 	mysqli_free_result($result);
 	}
 	
+	if ( $result->num_rows < 1 ) {
+	echo 'No address alerts created yet.';
+	}
+	
+	
 
+?>
+
+
+
+
+<?php
 }
 ?>
