@@ -2,5 +2,26 @@
 /*
  * Copyright 2018 GPLv3, Zillexplorer by Mike Kilday: http://DragonFrugal.com
  */
+ 
+//print_r($_SESSION['user']); // DEBUGGING
+
+if ( $_SESSION['user']['id'] ) {
 ?>
-ACCOUNT API
+
+<h3>Account API</h3>
+
+
+<p>
+
+	<b>API Key:</b> <?=$_SESSION['user']['api_key']?>
+
+</p>
+
+
+
+
+
+
+<?php
+}
+?>
