@@ -1,0 +1,3 @@
+2018/09/05-00:04:43.984372 7f0985f98740 Recovering log #101
+2018/09/05-00:04:43.987055 7f0985f98740 Delete type=0 #101
+2018/09/05-00:04:43.987087 7f0985f98740 Delete type=3 #100
