@@ -1,0 +1,3 @@
+2018/09/04-23:55:14.267448 7fc43894f740 Recovering log #99
+2018/09/04-23:55:14.269624 7fc43894f740 Delete type=3 #98
+2018/09/04-23:55:14.269686 7fc43894f740 Delete type=0 #99
